[project]
name = "paper-search-tool"
version = "1.0.0"
description = "AI 驱动的论文搜索与整理工具，支持多模型推理融合"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "RomanCohort"}]
keywords = ["paper", "search", "ai", "streamlit", "multi-model"]

dependencies = [
    "streamlit>=1.32",
    "langchain>=0.1",
    "openai>=1.14",
    "tiktoken>=0.6",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "pillow>=10.2",
    "numpy>=1.26",
    "pandas>=2.2",
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
